--- a/前端/sub/cover.html
+++ b/前端/sub/cover.html
@@ -1,15 +1,29 @@
 ﻿<html>
 	<head>
 		<style type="text/css">
-		h1 {
+		.query{
+			width:100%;
+			height:60px;
+			margin-top:10px;
+			float:left;
 			background-color:#f6f6f6;
-			font-size:25;
-			color:#484848;
+		}
+		.query span{
+			display:block;
+			float:left;
+			line-height:30px;
+			text-align:center;
+			margin:15px;
+			color:#666666;
+			margin-left:20px;
+			font-size:30px;
 		}
 		</style>
 	</head>
 
 	<body>
-		<h1>欢迎登陆山东省人力资源市场数据采集系统</h1>
+		<div class="query">
+			<span>欢迎登陆山东省人力资源市场数据采集系统</span>
+		</div>
 	</body>
 </html>
