--- a/前端/sub/sampling.html
+++ b/前端/sub/sampling.html
@@ -66,6 +66,30 @@
 		<div class="head">
 			<div></div>
 			<span>取样分析</span>
+			<span style="float: right;">
+				<form name="chooseProvince" action="" method="post">
+					选择省份：
+					<select name="province_Name" onchange="submit();">
+						<option value="济南">济南</option>
+						<option value="青岛">青岛</option>
+						<option value="淄博">淄博</option>
+						<option value="德州">德州</option>
+						<option value="烟台">烟台</option>
+						<option value="潍坊">潍坊</option>
+						<option value="济宁">济宁</option>
+						<option value="泰安">泰安</option>
+						<option value="临沂">临沂</option>
+						<option value="菏泽">菏泽</option>
+						<option value="滨州">滨州</option>
+						<option value="东营">东营</option>
+						<option value="威海">威海</option>
+						<option value="枣庄">枣庄</option>
+						<option value="日照">日照</option>
+						<option value="莱芜">莱芜</option>
+						<option value="聊城">聊城</option>
+					</select>
+				</form>
+			</span>
 		</div>
 		
 		<div class="title">
